generated/src/antlr4/GraphQLParser.ts
// Generated from src/antlr4/GraphQL.g4 by ANTLR 4.6-SNAPSHOT


import { ATN } from 'antlr4ts/atn/ATN';
import { ATNDeserializer } from 'antlr4ts/atn/ATNDeserializer';
import { FailedPredicateException } from 'antlr4ts/FailedPredicateException';
import { NotNull } from 'antlr4ts/Decorators';
import { NoViableAltException } from 'antlr4ts/NoViableAltException';
import { Override } from 'antlr4ts/Decorators';
import { Parser } from 'antlr4ts/Parser';
import { ParserRuleContext } from 'antlr4ts/ParserRuleContext';
import { ParserATNSimulator } from 'antlr4ts/atn/ParserATNSimulator';
import { ParseTreeListener } from 'antlr4ts/tree/ParseTreeListener';
import { ParseTreeVisitor } from 'antlr4ts/tree/ParseTreeVisitor';
import { RecognitionException } from 'antlr4ts/RecognitionException';
import { RuleContext } from 'antlr4ts/RuleContext';
import { RuleVersion } from 'antlr4ts/RuleVersion';
import { TerminalNode } from 'antlr4ts/tree/TerminalNode';
import { Token } from 'antlr4ts/Token';
import { TokenStream } from 'antlr4ts/TokenStream';
import { Vocabulary } from 'antlr4ts/Vocabulary';
import { VocabularyImpl } from 'antlr4ts/VocabularyImpl';

import * as Utils from 'antlr4ts/misc/Utils';

import { GraphQLListener } from './GraphQLListener';

export class GraphQLParser extends Parser {
	public static readonly T__0=1;
	public static readonly T__1=2;
	public static readonly T__2=3;
	public static readonly T__3=4;
	public static readonly T__4=5;
	public static readonly T__5=6;
	public static readonly T__6=7;
	public static readonly T__7=8;
	public static readonly T__8=9;
	public static readonly T__9=10;
	public static readonly T__10=11;
	public static readonly T__11=12;
	public static readonly T__12=13;
	public static readonly T__13=14;
	public static readonly T__14=15;
	public static readonly T__15=16;
	public static readonly T__16=17;
	public static readonly T__17=18;
	public static readonly T__18=19;
	public static readonly T__19=20;
	public static readonly T__20=21;
	public static readonly T__21=22;
	public static readonly T__22=23;
	public static readonly T__23=24;
	public static readonly T__24=25;
	public static readonly T__25=26;
	public static readonly T__26=27;
	public static readonly T__27=28;
	public static readonly T__28=29;
	public static readonly BOOLEAN=30;
	public static readonly NAMETYPE=31;
	public static readonly NAME=32;
	public static readonly STRING=33;
	public static readonly COMMENT=34;
	public static readonly NUMBER=35;
	public static readonly WS=36;
	public static readonly RULE_document = 0;
	public static readonly RULE_definition = 1;
	public static readonly RULE_operationDefinition = 2;
	public static readonly RULE_selectionSet = 3;
	public static readonly RULE_operationType = 4;
	public static readonly RULE_selection = 5;
	public static readonly RULE_field = 6;
	public static readonly RULE_fieldName = 7;
	public static readonly RULE_alias = 8;
	public static readonly RULE_arguments = 9;
	public static readonly RULE_argument = 10;
	public static readonly RULE_fragmentSpread = 11;
	public static readonly RULE_inlineFragment = 12;
	public static readonly RULE_fragmentDefinition = 13;
	public static readonly RULE_fragmentName = 14;
	public static readonly RULE_typeSystemDefinition = 15;
	public static readonly RULE_typeDefinition = 16;
	public static readonly RULE_scalarType = 17;
	public static readonly RULE_scalarTypeDefinition = 18;
	public static readonly RULE_objectType = 19;
	public static readonly RULE_objectTypeDefinition = 20;
	public static readonly RULE_implementsInterfaces = 21;
	public static readonly RULE_implementsList = 22;
	public static readonly RULE_fieldDefinition = 23;
	public static readonly RULE_deprecated = 24;
	public static readonly RULE_deprecationReason = 25;
	public static readonly RULE_argumentsDefinition = 26;
	public static readonly RULE_inputValueDefinition = 27;
	public static readonly RULE_interfaceType = 28;
	public static readonly RULE_interfaceTypeDefinition = 29;
	public static readonly RULE_unionType = 30;
	public static readonly RULE_unionTypeDefinition = 31;
	public static readonly RULE_unionMembers = 32;
	public static readonly RULE_value = 33;
	public static readonly RULE_enumType = 34;
	public static readonly RULE_enumTypeDefinition = 35;
	public static readonly RULE_enumValueDefinition = 36;
	public static readonly RULE_enumValue = 37;
	public static readonly RULE_inputObjectTypeDefinition = 38;
	public static readonly RULE_typeExtensionDefinition = 39;
	public static readonly RULE_directiveDefinition = 40;
	public static readonly RULE_directiveLocations = 41;
	public static readonly RULE_directives = 42;
	public static readonly RULE_directive = 43;
	public static readonly RULE_typeCondition = 44;
	public static readonly RULE_variableDefinitions = 45;
	public static readonly RULE_variableDefinition = 46;
	public static readonly RULE_variable = 47;
	public static readonly RULE_defaultValue = 48;
	public static readonly RULE_valueOrVariable = 49;
	public static readonly RULE_type = 50;
	public static readonly RULE_typeName = 51;
	public static readonly RULE_listType = 52;
	public static readonly RULE_nonNullType = 53;
	public static readonly RULE_array = 54;
	public static readonly RULE_schemaDefinition = 55;
	public static readonly RULE_schemaQueryDefinition = 56;
	public static readonly RULE_schemaMutationDefinition = 57;
	public static readonly RULE_schemaSubscriptionDefinition = 58;
	public static readonly ruleNames: string[] = [
		"document", "definition", "operationDefinition", "selectionSet", "operationType", 
		"selection", "field", "fieldName", "alias", "arguments", "argument", "fragmentSpread", 
		"inlineFragment", "fragmentDefinition", "fragmentName", "typeSystemDefinition", 
		"typeDefinition", "scalarType", "scalarTypeDefinition", "objectType", 
		"objectTypeDefinition", "implementsInterfaces", "implementsList", "fieldDefinition", 
		"deprecated", "deprecationReason", "argumentsDefinition", "inputValueDefinition", 
		"interfaceType", "interfaceTypeDefinition", "unionType", "unionTypeDefinition", 
		"unionMembers", "value", "enumType", "enumTypeDefinition", "enumValueDefinition", 
		"enumValue", "inputObjectTypeDefinition", "typeExtensionDefinition", "directiveDefinition", 
		"directiveLocations", "directives", "directive", "typeCondition", "variableDefinitions", 
		"variableDefinition", "variable", "defaultValue", "valueOrVariable", "type", 
		"typeName", "listType", "nonNullType", "array", "schemaDefinition", "schemaQueryDefinition", 
		"schemaMutationDefinition", "schemaSubscriptionDefinition"
	];

	private static readonly _LITERAL_NAMES: (string | undefined)[] = [
		undefined, "'{'", "','", "'}'", "'query'", "'mutation'", "'subscription'", 
		"':'", "'('", "')'", "'...'", "'on'", "'fragment'", "'scalar'", "'implements'", 
		"'@'", "'deprecated'", "'interface'", "'union'", "'='", "'|'", "'enum'", 
		"'input'", "'extend'", "'directive'", "'$'", "'['", "']'", "'!'", "'schema'", 
		undefined, "'type'"
	];
	private static readonly _SYMBOLIC_NAMES: (string | undefined)[] = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, "BOOLEAN", "NAMETYPE", "NAME", "STRING", "COMMENT", 
		"NUMBER", "WS"
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(GraphQLParser._LITERAL_NAMES, GraphQLParser._SYMBOLIC_NAMES, []);

	@Override
	@NotNull
	public get vocabulary(): Vocabulary {
		return GraphQLParser.VOCABULARY;
	}

	@Override
	public get grammarFileName(): string { return "GraphQL.g4"; }

	@Override
	public get ruleNames(): string[] { return GraphQLParser.ruleNames; }

	@Override
	public get serializedATN(): string { return GraphQLParser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(GraphQLParser._ATN, this);
	}
	@RuleVersion(0)
	public document(): DocumentContext {
		let _localctx: DocumentContext = new DocumentContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, GraphQLParser.RULE_document);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 119; 
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 118;
				this.definition();
				}
				}
				this.state = 121; 
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ( (((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << GraphQLParser.T__0) | (1 << GraphQLParser.T__3) | (1 << GraphQLParser.T__4) | (1 << GraphQLParser.T__5) | (1 << GraphQLParser.T__11) | (1 << GraphQLParser.T__12) | (1 << GraphQLParser.T__16) | (1 << GraphQLParser.T__17) | (1 << GraphQLParser.T__20) | (1 << GraphQLParser.T__21) | (1 << GraphQLParser.T__22) | (1 << GraphQLParser.T__23) | (1 << GraphQLParser.T__28) | (1 << GraphQLParser.NAMETYPE))) !== 0) || _la===GraphQLParser.COMMENT );
			this.state = 123;
			this.match(GraphQLParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public definition(): DefinitionContext {
		let _localctx: DefinitionContext = new DefinitionContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, GraphQLParser.RULE_definition);
		try {
			this.state = 128;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input,1,this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 125;
				this.operationDefinition();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 126;
				this.fragmentDefinition();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 127;
				this.typeSystemDefinition();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public operationDefinition(): OperationDefinitionContext {
		let _localctx: OperationDefinitionContext = new OperationDefinitionContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, GraphQLParser.RULE_operationDefinition);
		let _la: number;
		try {
			this.state = 153;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input,6,this._ctx) ) {
			case 1:
				_localctx = new SelectionOnlyOperationDefinitionContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 133;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===GraphQLParser.COMMENT) {
					{
					{
					this.state = 130;
					this.match(GraphQLParser.COMMENT);
					}
					}
					this.state = 135;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 136;
				this.selectionSet();
				}
				break;

			case 2:
				_localctx = new FullOperationDefinitionContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 140;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===GraphQLParser.COMMENT) {
					{
					{
					this.state = 137;
					this.match(GraphQLParser.COMMENT);
					}
					}
					this.state = 142;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 143;
				this.operationType();
				this.state = 144;
				this.match(GraphQLParser.NAME);
				this.state = 146;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===GraphQLParser.T__7) {
					{
					this.state = 145;
					this.variableDefinitions();
					}
				}

				this.state = 149;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===GraphQLParser.T__14) {
					{
					this.state = 148;
					this.directives();
					}
				}

				this.state = 151;
				this.selectionSet();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public selectionSet(): SelectionSetContext {
		let _localctx: SelectionSetContext = new SelectionSetContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, GraphQLParser.RULE_selectionSet);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 155;
			this.match(GraphQLParser.T__0);
			this.state = 156;
			this.selection();
			this.state = 163;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << GraphQLParser.T__1) | (1 << GraphQLParser.T__9) | (1 << GraphQLParser.NAMETYPE))) !== 0) || _la===GraphQLParser.NAME || _la===GraphQLParser.COMMENT) {
				{
				{
				this.state = 158;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===GraphQLParser.T__1) {
					{
					this.state = 157;
					this.match(GraphQLParser.T__1);
					}
				}

				this.state = 160;
				this.selection();
				}
				}
				this.state = 165;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 166;
			this.match(GraphQLParser.T__2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public operationType(): OperationTypeContext {
		let _localctx: OperationTypeContext = new OperationTypeContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, GraphQLParser.RULE_operationType);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 168;
			_la = this._input.LA(1);
			if ( !((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << GraphQLParser.T__3) | (1 << GraphQLParser.T__4) | (1 << GraphQLParser.T__5))) !== 0)) ) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public selection(): SelectionContext {
		let _localctx: SelectionContext = new SelectionContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, GraphQLParser.RULE_selection);
		try {
			this.state = 173;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input,9,this._ctx) ) {
			case 1:
				_localctx = new FieldSelectionContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 170;
				this.field();
				}
				break;

			case 2:
				_localctx = new FragmentSpreadSelectionContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 171;
				this.fragmentSpread();
				}
				break;

			case 3:
				_localctx = new InlineFragmentSelectionContext(_localctx);
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 172;
				this.inlineFragment();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public field(): FieldContext {
		let _localctx: FieldContext = new FieldContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, GraphQLParser.RULE_field);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 178;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===GraphQLParser.COMMENT) {
				{
				{
				this.state = 175;
				this.match(GraphQLParser.COMMENT);
				}
				}
				this.state = 180;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 181;
			this.fieldName();
			this.state = 183;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===GraphQLParser.T__7) {
				{
				this.state = 182;
				this.arguments();
				}
			}

			this.state = 186;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===GraphQLParser.T__14) {
				{
				this.state = 185;
				this.directives();
				}
			}

			this.state = 189;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===GraphQLParser.T__0) {
				{
				this.state = 188;
				this.selectionSet();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public fieldName(): FieldNameContext {
		let _localctx: FieldNameContext = new FieldNameContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, GraphQLParser.RULE_fieldName);
		try {
			this.state = 194;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input,14,this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 191;
				this.match(GraphQLParser.NAMETYPE);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 192;
				this.alias();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 193;
				this.match(GraphQLParser.NAME);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public alias(): AliasContext {
		let _localctx: AliasContext = new AliasContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, GraphQLParser.RULE_alias);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 196;
			this.match(GraphQLParser.NAME);
			this.state = 197;
			this.match(GraphQLParser.T__6);
			this.state = 198;
			this.match(GraphQLParser.NAME);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public arguments(): ArgumentsContext {
		let _localctx: ArgumentsContext = new ArgumentsContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, GraphQLParser.RULE_arguments);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 200;
			this.match(GraphQLParser.T__7);
			this.state = 201;
			this.argument();
			this.state = 208;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===GraphQLParser.T__1 || _la===GraphQLParser.NAME || _la===GraphQLParser.COMMENT) {
				{
				{
				this.state = 203;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===GraphQLParser.T__1) {
					{
					this.state = 202;
					this.match(GraphQLParser.T__1);
					}
				}

				this.state = 205;
				this.argument();
				}
				}
				this.state = 210;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 211;
			this.match(GraphQLParser.T__8);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public argument(): ArgumentContext {
		let _localctx: ArgumentContext = new ArgumentContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, GraphQLParser.RULE_argument);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 216;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===GraphQLParser.COMMENT) {
				{
				{
				this.state = 213;
				this.match(GraphQLParser.COMMENT);
				}
				}
				this.state = 218;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 219;
			this.match(GraphQLParser.NAME);
			this.state = 220;
			this.match(GraphQLParser.T__6);
			this.state = 221;
			this.valueOrVariable();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public fragmentSpread(): FragmentSpreadContext {
		let _localctx: FragmentSpreadContext = new FragmentSpreadContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, GraphQLParser.RULE_fragmentSpread);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 223;
			this.match(GraphQLParser.T__9);
			this.state = 224;
			this.fragmentName();
			this.state = 226;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===GraphQLParser.T__14) {
				{
				this.state = 225;
				this.directives();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public inlineFragment(): InlineFragmentContext {
		let _localctx: InlineFragmentContext = new InlineFragmentContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, GraphQLParser.RULE_inlineFragment);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 228;
			this.match(GraphQLParser.T__9);
			this.state = 229;
			this.match(GraphQLParser.T__10);
			this.state = 230;
			this.typeCondition();
			this.state = 232;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===GraphQLParser.T__14) {
				{
				this.state = 231;
				this.directives();
				}
			}

			this.state = 234;
			this.selectionSet();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public fragmentDefinition(): FragmentDefinitionContext {
		let _localctx: FragmentDefinitionContext = new FragmentDefinitionContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, GraphQLParser.RULE_fragmentDefinition);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 239;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===GraphQLParser.COMMENT) {
				{
				{
				this.state = 236;
				this.match(GraphQLParser.COMMENT);
				}
				}
				this.state = 241;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 242;
			this.match(GraphQLParser.T__11);
			this.state = 243;
			this.fragmentName();
			this.state = 244;
			this.match(GraphQLParser.T__10);
			this.state = 245;
			this.typeCondition();
			this.state = 247;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===GraphQLParser.T__14) {
				{
				this.state = 246;
				this.directives();
				}
			}
